--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,10 @@
 html, body {
   margin: 0;
   padding: 0;
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+  position: fixed;
 }
 canvas {
   display: block;
