--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ html, body {
 canvas {
   display: block;
   /* height: 100%; */
-  overflow: hidden;
+  /* overflow: hidden; */
   /* width: 100%; */
-  position: fixed;
+  /* position: fixed; */
 }
