--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,8 @@
 html, body {
   margin: 0;
   padding: 0;
+  touch-action: none;
 }
 canvas {
   display: block;
-  /* height: 100%; */
-  /* overflow: hidden; */
-  /* width: 100%; */
-  /* position: fixed; */
 }
